--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,14 @@
 <footer class="footer">
   <small>
     <a href="http://superiordetailing-services.com/">Superior Detailing</a>
-    by Greg Gay
+    created by Ravi Bissoonnauth
   </small>
   <nav>
     <ul>
       <li><%= link_to "Home",    root_path %></li>
-      <li><%= link_to "Help",    help_path %></li>
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
+      <li><%= link_to "Help",    help_path %></li>
     </ul>
   </nav>
 </footer>
