--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,27 @@
-<div class="center hero-unit">
-  <h1>Welcome to Superior Detailing</h1>
+<% if signed_in? %>
+  <div class="row">
+    <aside class="span4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/appointment_form' %>
+      </section>
+    </aside>
+  </div>  
+<% else %>
+  <div class="center hero-unit">
+    <h1>Welcome to Superior Detailing</h1>
 
-  <h2>
-    This is the home page for the
-    <a href="http://superiordetailing-services.com/">Superior Detailing Services</a>
-    web application.
-  </h2>
+    <h2>
+      This is the home page for the
+      <a href="http://superiordetailing-services.com/">Superior Detailing Services</a>
+      web application.
+    </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
+    <%= link_to "Sign up now!", signup_path, 
+                                class: "btn btn-large btn-primary" %>
+  </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<% end %>
