--- a/app/views/shared/_appointment_form.html.erb
+++ b/app/views/shared/_appointment_form.html.erb
@@ -61,7 +61,168 @@
 		<%= f.select :date, [['Select a date and time', nil], '05-04-2013 at 10:00am-11:00am', '05-04-2013 at 11:30am-12:30pm', '05-04-2013 at 1:00am-2:00am'] %>
 		</td>
 	</tr>
+<!--WEEK 2-->
+	<tr>
+		<td>
+		<h2>5</h2>
+		<%= f.select :package2, [['Select a package', nil], '60 Dollars', '80 Dollars'] %>
 
+		<%= f.select :date2, [['Select a date and time', nil], '05-05-2013 at 10:00am-11:00am', '05-05-2013 at 11:30am-12:30pm', '05-05-2013 at 1:00am-2:00am'] %>
+		</td>
+
+		<td>
+		<h2>6</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>7</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>8</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>9</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>10</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>11</h2>
+		<%= f.select :package3, [['Select a package', nil], '60 Dollars', '80 Dollars'] %>
+
+		<%= f.select :date3, [['Select a date and time', nil], '05-11-2013 at 10:00am-11:00am', '05-11-2013 at 11:30am-12:30pm', '05-11-2013 at 1:00am-2:00am'] %>
+		</td>
+	</tr>
+<!--WEEK 3-->
+	<tr>
+		<td>
+		<h2>12</h2>
+		<%= f.select :package4, [['Select a package', nil], '60 Dollars', '80 Dollars'] %>
+
+		<%= f.select :date4, [['Select a date and time', nil], '05-12-2013 at 10:00am-11:00am', '05-12-2013 at 11:30am-12:30pm', '05-12-2013 at 1:00am-2:00am'] %>
+		</td>
+
+		<td>
+		<h2>13</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>14</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>15</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>16</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>17</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>18</h2>
+		<%= f.select :package5, [['Select a package', nil], '60 Dollars', '80 Dollars'] %>
+
+		<%= f.select :date5, [['Select a date and time', nil], '05-18-2013 at 10:00am-11:00am', '05-18-2013 at 11:30am-12:30pm', '05-18-2013 at 1:00am-2:00am'] %>
+		</td>
+	</tr>
+<!--WEEK 4-->
+	<tr>
+		<td>
+		<h2>19</h2>
+		<%= f.select :package6, [['Select a package', nil], '60 Dollars', '80 Dollars'] %>
+
+		<%= f.select :date6, [['Select a date and time', nil], '05-19-2013 at 10:00am-11:00am', '05-19-2013 at 11:30am-12:30pm', '05-19-2013 at 1:00am-2:00am'] %>
+		</td>
+
+		<td>
+		<h2>20</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>21</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>22</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>23</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>24</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>25</h2>
+		<%= f.select :package7, [['Select a package', nil], '60 Dollars', '80 Dollars'] %>
+
+		<%= f.select :date7, [['Select a date and time', nil], '05-25-2013 at 10:00am-11:00am', '05-25-2013 at 11:30am-12:30pm', '05-25-2013 at 1:00am-2:00am'] %>
+		</td>
+	</tr>
+<!--WEEK 5-->
+	<tr>
+		<td>
+		<h2>26</h2>
+		<%= f.select :package8, [['Select a package', nil], '60 Dollars', '80 Dollars'] %>
+
+		<%= f.select :date8, [['Select a date and time', nil], '05-26-2013 at 10:00am-11:00am', '05-26-2013 at 11:30am-12:30pm','05-26-2013 at 1:00am-2:00am', '05-26-2013 at 5:00am-6:00am'] %>
+		</td>
+
+		<td>
+		<h2>27</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>28</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>29</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>30</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>31</h2>
+		<h2>BLOCKED</h2>
+		</td>
+
+		<td>
+		<h2>1</h2>
+		<h2>BLOCKED</h2>
+		</td>
+	</tr>
 	</table>
 	<br/>
 </div>
