--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,10 @@
   <aside class="span4">
     <section>
       <h1>
-	    <%= @user.firstname %>
-	    <%= @user.lastname %>
+  	    <%= @user.firstname %>
+  	    <%= @user.lastname %>
       </h1>
+      <%= link_to "Edit Profile", edit_user_path(current_user) %>
     </section>
   </aside>
   <div class="span8">
