Fixed validation errors

--- a/app/views/shared/_appointment_form.html.erb
+++ b/app/views/shared/_appointment_form.html.erb
@@ -9,9 +9,8 @@
 <div class="field">
 	<h1>
 	   	May 2013
-	</h1>
-	<hr/><br/>
-	<table>
+	</h1><br/>
+	<table border="3">
 <!--DAYS OF THE WEEK-->
 	<tr>
 		<th>Sunday<br/><br/></th>
