--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact Us') %>
 <h1>Contact Us</h1>
 <p>
-  Superior Detailing was created by Ravi Bissoonnauth. It's a automotive detailing business located in Asheville, NC.
+If there is any other way that we can assist you, please e-mail us at superiordetailingservices@gmail.com or call either Jordan Ellege (828-335-8626) or Ravi Bissoonnauth(828-768-4002) or visit our <a href="https://www.facebook.com/superiordetailingpage">facebook</a> page.
 </p>
