--- a/app/views/appointments/_appointment.html.erb
+++ b/app/views/appointments/_appointment.html.erb
@@ -33,8 +33,8 @@
     Posted <%= time_ago_in_words(appointment.created_at) %> ago.
   </span> 
   <% if current_user?(appointment.user) %>
-    <%= link_to "delete", appointment, method: :delete,
-                                     data: { confirm: "Are you sure you want to delete this appointment?" },
+    <%= link_to "Reschedule", appointment, method: :delete,
+                                     data: { confirm: "Are you sure you want to delete this appointment and reschedule?" },
                                      title: appointment.date %>
   <% end %>
 </li>
