--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,7 @@
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "superior detailing", root_path, id: "logo" %>
+  <%= link_to image_tag("logo_7.jpg", alt: "Logo", width:"35", height:"35") %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
