--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,4 +21,5 @@
     <%= link_to "Sign up now!", signup_path, 
                                 class: "btn btn-large btn-primary" %>
   </div>
+  <%= link_to image_tag("logo_3.jpg", alt: "Logo") %>
 <% end %>
