--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,4 +11,5 @@
       <li><%= link_to "Help",    help_path %></li>
     </ul>
   </nav>
+  <%= link_to image_tag("logo_7.jpg", alt: "Logo", width:"50", height:"50") %>
 </footer>
