--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
           <% end %>
         </ul>
       </nav>
-      <%= link_to image_tag("logo_10.jpg", alt: "Logo", width:"55", height:"55") %>
+      <%= link_to image_tag("logo_10.jpg", alt: "Logo", width:"55", height:"55"), root_path %>
     </div>
   </div>
 </header>
