--- a/app/views/shared/_appointment_form.html.erb
+++ b/app/views/shared/_appointment_form.html.erb
@@ -12,6 +12,20 @@ document.getElementById('new_appointment').reset();
 }
 , :html => { :onsubmit => 'appTest();' }
 </script>-->
+<style type="text/css">
+th {
+	background-image: -moz-linear-gradient(top, #003, #009);
+    background-image: -ms-linear-gradient(top, #003, #009);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#003), to(#009));
+    background-image: -webkit-linear-gradient(top, #003, #009);  background-image: -o-linear-gradient(top, #003, #009);
+    background-image: linear-gradient(top, #003, #009);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000033', endColorstr='#000099', GradientType=0);
+	text-align:center;
+	color:#000000;
+	font-weight:bold;
+}
+</style>
 
 <%= form_for(@appointment) do |f| %>
 <%= render 'shared/error_messages', object: f.object %>
