Added design to the appointments table

--- a/app/views/shared/_appointment_form.html.erb
+++ b/app/views/shared/_appointment_form.html.erb
@@ -22,7 +22,7 @@ th {
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000033', endColorstr='#000099', GradientType=0);
 	text-align:center;
-	color:#000000;
+	color:#ffffff;
 	font-weight:bold;
 }
 </style>
