--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -204,3 +204,18 @@ th {
   padding:15px;
   font-size:17px;
 }
+
+td.alt {
+  background-image: -moz-linear-gradient(top, #003, #009);
+  background-image: -ms-linear-gradient(top, #003, #009);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#003), to(#009));
+  background-image: -webkit-linear-gradient(top, #003, #009);  background-image: -o-linear-gradient(top, #003, #009);
+  background-image: linear-gradient(top, #003, #009);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000033', endColorstr='#000099', GradientType=0);
+  text-align:center;
+  color:#ffffff;
+  font-weight:bold;
+  padding:15px;
+  font-size:17px;
+}
