--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,15 +56,13 @@ h2 {
 }
 
 p {
-  font-size: 1.1em;
-  line-height: 1.7em;
 }
 
 pre {
-  font-size: 1.1em;
-  line-height: 1.7em;
-  background-color:black;
-  color:gold;
+  font-family:Georgia,Serif;
+  align:left;
+  background-color:cornflowerblue;
+  color:black;
 }
 
 /* header */
