--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,27 +1,24 @@
 <% provide(:title, 'About Us') %>
 <h1>About Us</h1>
 <pre>
-<p>
-  Superior Detailing is an automotive detailing business located in Asheville, NC dedicated to giving our customers a great looking car at a great value. We treat every car as if it were our own and we strive for the complete satisfaction of our customers.
-  Superior Detailing was created by Ravi Bissoonnauth.
+<p class="text-left">
+<h5>Superior Detailing was created by Ravi Bissoonnauth.
+Superior Detailing is an automotive detailing business located in Asheville, NC dedicated to giving our customers a great looking car at a great value. We treat every car as if it were our own and we strive for the complete satisfaction of our customers.</h5>
 
-Description
+<h4>Description
 
-Packages:
-
-The Basic: Full Exterior Wash, Tire Shine, Interior Vacuum, Window Cleaning, Hand Applied Wax (Cars-$60, Truck/SUV-$80*)
+Packages:</h4>
+<h5>The Basic: Full Exterior Wash, Tire Shine, Interior Vacuum, Window Cleaning, Hand Applied Wax (Cars-$60, Truck/SUV-$80*)
 
 The Premium: The Basic Plus: Wheel Well Cleaning, Bug and Tar Removal, Interior Shine/Protection (choice between natural or high shine), Interior and Cloth Seat Shampoo, Auto Fragrance (optional) (Cars-$80,Truck/SUV-$100*)
 
 The Superior: The Basic And Premium Plus: Minor Scratch Removal, Synthetic Detailer Spray, Surface Contaminate Removal, Interior Steam Cleaning (Cars-$100, Truck/SUV-$120*)
 
 *highly oversized trucks or SUVs (example: Chevrolet Suburban) will have an extra $20 added to package price due to higher supply usage.
-
-Optional Services:
-
-(optional services can be added to any one of ourpackages that do not already include that service):
-
-Minor Scratch Removal- $10
+</h5>
+<h4>Optional Services:
+(Can be added to any one of ourpackages that do not already include that service):</h4>
+<h5>Minor Scratch Removal- $10
 
 Surface Contaminate Removal (great for a smooth as glass finish before waxing)- $15
 
@@ -30,5 +27,6 @@ Chrome Wheel Polishing-$20 (add $5 for additional accessories)
 Leather Cleaning and Conditioning- $15
 
 Headlight Restoration- $25
+</h5>
 </p>
 </pre>
