--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,6 +63,8 @@ pre {
   align:left;
   background-color:cornflowerblue;
   color:black;
+  word-wrap: normal;
+  white-space: wrap;
 }
 
 /* header */
