--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,9 +13,12 @@
     <h1>Welcome to Superior Detailing</h1>
 
     <h2>
-      This is the home page for the
-      <a href="http://superiordetailing-services.com/">Superior Detailing Services</a>
-      web application.
+      This is the home page for the Superior Detailing web application.
+
+      Superior Detailing was created by Ravi Bissoonnauth.
+      Superior Detailing is an automotive detailing business located in Asheville, NC dedicated to giving our customers a great 
+      looking car at a great value. We treat every car as if it were our own and we strive for the complete satisfaction of our
+      customers.
     </h2>
 
     <%= link_to "Sign up now!", signup_path, 
