Final changes have been made

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,10 +2,11 @@
 <h1>About Us</h1>
 <pre>
 <p>
-<h4>Description
+<h4>Superior Detailing is an automotive detailing business located in Asheville, NC dedicated to giving 
+our customers a great looking car at a great value. We treat every car as if it were our own and we 
+strive for the complete satisfaction of our customers.</h4>
 
-Packages:</h4>
-<h5><strong>The Basic:</strong> Full Exterior Wash, Tire Shine, Interior Vacuum, Window Cleaning, Hand Applied Wax
+<h4>Packages:</h4><h5>The Basic: Full Exterior Wash, Tire Shine, Interior Vacuum, Window Cleaning, Hand Applied Wax
 
 (Cars-$60, Truck/SUV-$80*)
 
@@ -19,11 +20,11 @@ Surface Contaminate Removal, Interior Steam Cleaning
 
 (Cars-$100, Truck/SUV-$120*)
 
-*highly oversized trucks or SUVs (example: Chevrolet Suburban) will have an extra $20 added to package price due to higher supply usage.
+*highly oversized trucks or SUVs (example: Chevrolet Suburban) will have an extra $20 added to 
+package price due to higher supply usage.
 </h5>
 <h4>Optional Services:
-(Can be added to any one of our packages that do not already include that service):</h4>
-<h5>Minor Scratch Removal- $10
+(Can be added to any one of our packages that do not already include that service):</h4><h5>Minor Scratch Removal- $10
 
 Surface Contaminate Removal (great for a smooth as glass finish before waxing)- $15
 
