--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, 'Contact Us') %>
 <h1>Contact Us</h1>
+<pre>
 <p>
-If there is any other way that we can assist you, please e-mail us at superiordetailingservices@gmail.com or call either Jordan Ellege (828-335-8626) or Ravi Bissoonnauth(828-768-4002) or visit our <a href="https://www.facebook.com/superiordetailingpage">facebook</a> page.
+<h5>If there is any other way that we can assist you, please e-mail us at superiordetailingservices@gmail.com.
+
+You can also call either Jordan Ellege (828-335-8626) or Ravi Bissoonnauth(828-768-4002) or visit our facebook page.</h5> <a href="https://www.facebook.com/superiordetailingpage"><%= image_tag("facebook.jpg", alt: "Logo", width: "50", hieght: "50") %></a>
 </p>
+</pre>
