--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,16 +13,11 @@
     <h1>Welcome to Superior Detailing</h1>
 
     <h2>
-      This is the home page for the Superior Detailing web application.
-
-      Superior Detailing was created by Ravi Bissoonnauth.
-      Superior Detailing is an automotive detailing business located in Asheville, NC dedicated to giving our customers a great 
-      looking car at a great value. We treat every car as if it were our own and we strive for the complete satisfaction of our
-      customers.
+      This is the home page for the
+      Superior Detailing Services web application.
     </h2>
 
     <%= link_to "Sign up now!", signup_path, 
                                 class: "btn btn-large btn-primary" %>
   </div>
-  <%= link_to image_tag("logo_3.jpg", alt: "Logo") %>
 <% end %>
