--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,23 @@
 <% provide(:title, 'Contact Us') %>
 <h1>Contact Us</h1>
-<pre>
-<p>
-<h5>If there is any other way that we can assist you, please e-mail us at superiordetailingservices@gmail.com.
+<div class="container" style="background-color:black">
+  <div class="top">
+    <div class="span7">
+      <h5 class="h5Contact">
+      	If there is any way that we can assist you, please contact us.
+        <br/><br>
+      	E-mail: superiordetailingservices@gmail.com
+      	<br/><br/>
+      	Ravi Bissoonnauth: (828)-768-4002
+      	<br/><br/>
+      	Jordan Ellege: (828)-335-8626
+	    </h5>
+      <br/>
+    </div>
 
-You can also call either Jordan Ellege (828-335-8626) or Ravi Bissoonnauth(828-768-4002) or visit our facebook page.</h5> <a href="https://www.facebook.com/superiordetailingpage"><%= image_tag("facebook.jpg", alt: "Logo", width: "50", hieght: "50") %></a>
-</p>
-</pre>
+    <div class="span2 offset1">
+    	<a href="https://www.facebook.com/superiordetailingpage"><%= image_tag("facebook-logo.jpg", alt: "Logo", width: "100", hieght: "100") %></a>
+      <br/><br/><br/>
+    </div>
+  </div>
+</div>
