--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<% provide(:title, 'Sign Up') %>
+<h1>Sign Up</h1>
 
 <div class="row">
   <div class="span6 offset3">
@@ -39,7 +39,7 @@
       <!--<%= f.label :Appointment %>
       <%= f.select :state, [['Please select a date and time', nil], '04-05-2013 at 10:00am-11:00am', '04-05-2013 at 11:30am-12:30pm', '04-05-2013 at 10:00am-11:00am', '04-05-2013 at 11:30am-12:30pm'] %>-->
 	    <br/>
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Create My Account", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
