--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,38 +1,82 @@
 <% provide(:title, 'About Us') %>
 <h1>About Us</h1>
-<pre>
-<p>
-<h4>Superior Detailing is an automotive detailing business located in Asheville, NC dedicated to giving 
-our customers a great looking car at a great value. We treat every car as if it were our own and we 
-strive for the complete satisfaction of our customers.</h4>
-
-<h4>Packages:</h4><h5>The Basic: Full Exterior Wash, Tire Shine, Interior Vacuum, Window Cleaning, Hand Applied Wax
-
-(Cars-$60, Truck/SUV-$80*)
-
-The Premium: The Basic Plus: Wheel Well Cleaning, Bug and Tar Removal, Interior Shine/Protection 
-(choice between natural or high shine), Interior and Cloth Seat Shampoo, Auto Fragrance (optional) 
-
-(Cars-$80,Truck/SUV-$100*)
-
-The Superior: The Basic And Premium Plus: Minor Scratch Removal, Synthetic Detailer Spray, 
-Surface Contaminate Removal, Interior Steam Cleaning 
-
-(Cars-$100, Truck/SUV-$120*)
-
-*highly oversized trucks or SUVs (example: Chevrolet Suburban) will have an extra $20 added to 
-package price due to higher supply usage.
-</h5>
-<h4>Optional Services:
-(Can be added to any one of our packages that do not already include that service):</h4><h5>Minor Scratch Removal- $10
-
-Surface Contaminate Removal (great for a smooth as glass finish before waxing)- $15
-
-Chrome Wheel Polishing-$20 (add $5 for additional accessories)
-
-Leather Cleaning and Conditioning- $15
-
-Headlight Restoration- $25
-</h5>
-</p>
-</pre>
+<div class="container" style="background-color:black">
+  <div class="top">
+    <div class="span11">
+		<h4 class="h4About">Superior Detailing is an automotive detailing business located in Asheville, NC dedicated to giving 
+		our customers a great looking car at a great value. We treat every car as if it were our own and we 
+		strive for the complete satisfaction of our customers.</h4>
+		<br/>
+    </div>
+  </div>
+</div>
+<p></p>
+<div class="container" style="background-color:black">
+  <div class="bottom">
+    <div class="span11">
+		<h4 class="h4About">Services</h4>
+		<table border="1">
+			<tr>
+				<th>Packages</th>
+				<th>Description</th>
+				<th>Cost</th>
+			</tr>
+			<tr>
+				<th>Basic</th>
+				<th class="thAbout">Full Exterior Wash, Tire Shine, Interior Vacuum, Window Cleaning, Hand Applied Wax</th>
+				<th>Cars-$60<br/>Trucks/SUVs-$80</th>
+			</tr>
+			<tr>
+				<th>Premium</th>
+				<th class="thAbout">The Basic Plus: Wheel Well Cleaning, Bug and Tar Removal, Interior Shine/Protection (choice between natural or high shine), Interior and Cloth Seat Shampoo, Auto Fragrance</th>
+				<th>Cars-$80<br/>Trucks/SUVs-$100</th>
+			</tr>
+			<tr>
+				<th>Superior</th>
+				<th class="thAbout">The Basic And Premium Plus: Minor Scratch Removal, Synthetic Detailer Spray, Surface Contaminate Removal, Interior Steam Cleaning</th>
+				<th>Cars-$100<br/>Trucks/SUVs-$120</th>
+			</tr>
+		</table>
+		<br/><br/>
+		<h4 class="h4About">
+			Optional Services
+			<br/>
+			(Can be added to any one of our packages that do not already include that service)
+		</h4>
+		<div class="span5">
+		<table border="1">
+			<tr>
+				<th>Description</th>
+				<th class="thAbout2">Cost</th>
+			</tr>
+			<tr>
+				<th class="thAbout1">Minor Scratch Removal</th>
+				<th class="thAbout2">$10</th>
+			</tr>
+			<tr>
+				<th class="thAbout1">Surface Contaminate Removal (great for a smooth as glass finish before waxing)</th>
+				<th class="thAbout2">$15</th>
+			</tr>
+			<tr>
+				<th class="thAbout1">Chrome Wheel Polishing</th>
+				<th class="thAbout2">$20</th>
+			</tr>
+			<tr>
+				<th class="thAbout1">Leather Cleaning and Conditioning</th>
+				<th class="thAbout2">$15</th>
+			</tr>
+			<tr>
+				<th class="thAbout1">Headlight Restoration</th>
+				<th class="thAbout2">$25</th>
+			</tr>
+		</table>
+		</div>
+        <div class="offset1 span4">
+        	<br/><br/><br/><br/>
+        	<%= image_tag("BMWWheel.jpg", alt: "Logo", width:"500", height:"500") %>
+        	<br/><br/><br/><br/><br/><br/><br/>
+		</div>
+		<br/>
+    </div>
+  </div>
+</div>
