--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,45 +1,46 @@
-<% provide(:title, "Edit user") %> 
-<h1>Update your profile</h1>
+<% provide(:title, "Edit User") %>
+<h1>Update Your Profile</h1>
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
+    <div class="EditUI" style="background-color:black">
+      <%= form_for(@user) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
 
-      <%= f.label :first_name %>
-      <%= f.text_field :firstname %>
+        <%= f.label :first_name %>
+        <%= f.text_field :firstname %>
 
-      <%= f.label :last_name %>
-      <%= f.text_field :lastname %>
+        <%= f.label :last_name %>
+        <%= f.text_field :lastname %>
 
-      <%= f.label :email %>
-      <%= f.text_field :email %>
+        <%= f.label :email %>
+        <%= f.text_field :email %>
 
-      <%= f.label :street_address %>
-      <%= f.text_field :streetaddress %>
+        <%= f.label :street_address %>
+        <%= f.text_field :streetaddress %>
 
-      <%= f.label :city %>
-      <%= f.text_field :city %>
+        <%= f.label :city %>
+        <%= f.text_field :city %>
 
-      <%= f.label :state %>
-      <%= f.text_field :state %>
+        <%= f.label :state %>
+        <%= f.text_field :state %>
 
-      <%= f.label :zip %>
-      <%= f.text_field :zip %>
+        <%= f.label :zip %>
+        <%= f.text_field :zip %>
 
-      <%= f.label :phone %>
-      <%= f.text_field :phone %>
+        <%= f.label :phone %>
+        <%= f.text_field :phone %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password %>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
 
-      <%= f.label :password_confirmation, "Confirm Password" %>
-      <%= f.password_field :password_confirmation %>
-      </br>
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
-    <% end %>
-
-    <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
+        <%= f.label :password_confirmation, "Confirm Password" %>
+        <%= f.password_field :password_confirmation %>
+        <br/><br/>
+        <%= f.submit "Save Changes", class: "btn btn-large btn-primary" %>
+      <% end %>
+      <%= gravatar_for @user %>
+      <a href="http://gravatar.com/emails">change</a>
+    </div>
   </div>
 </div>
