--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,34 @@
 <% provide(:title, @user.firstname) %>
 <div class="row">
   <aside class="span4">
-    <section>
-      <h1>
-  	    <%= @user.firstname %>
-        <%= @user.lastname %><br/><br/>
-        Email: <%= @user.email %><br/>
-        Street: <%= @user.streetaddress %><br/>
-        City: <%= @user.city %> <br/>
-        State: <%= @user.state %><br/>
-        Zip: <%= @user.zip %><br/>
-        Phone Number: <%= @user.phone %>
-      </h1>
-      <br/>
-      <%= link_to "Edit Profile", edit_user_path(current_user) %>
-    </section>
+    <div class="sideBar" style="background-color:black">
+      <section>
+        <br/>
+        <h1>
+          <%= @user.firstname %>
+          <%= @user.lastname %><br/><br/>
+          Email: <%= @user.email %><br/>
+          Street: <%= @user.streetaddress %><br/>
+          City: <%= @user.city %><br/>
+          State: <%= @user.state %><br/>
+          Zip: <%= @user.zip %><br/>
+          Phone Number: <%= @user.phone %>
+        </h1>
+        <br/><br/>
+        <h5><%= link_to "Edit Profile", edit_user_path(current_user) %></h5>
+        <h5><%= link_to "Schedule an Appointment", help_path %></h5>
+      </section>
+    </div>
   </aside>
-  <div class="span8">
+
+  <div class="span7">
+    <div class="AppsUI" style="background-color:black">
+    <h3>Appointments (<%= @user.appointments.count %>)</h3>
     <% if @user.appointments.any? %>
-      <h3>Appointments (<%= @user.appointments.count %>)</h3>
       <ol class="appointments">
         <%= render @appointments %>
       </ol>
     <% end %>
+    </div>
   </div>
 </div>
