--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,18 @@
 <% provide(:title, 'All Users') %>
 <h1>All Users</h1>
 
-<ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user, size: 52 %>
-      <%= link_to user.firstname, user %>
-      <%= link_to user.lastname, user %>
+<div class="IndexUI" style="background-color:black">
+  <ul class="users">
+    <% @users.each do |user| %>
+      <li>
+        <%= gravatar_for user, size: 52 %>
+        <%= link_to user.firstname, user %>
+        <%= link_to user.lastname, user %>
 
-      <% if current_user.admin? && !current_user?(user) %>
-    	| <%= link_to "delete", user, method: :delete, data: { confirm: "You sure you want to delete this account?" } %>
-  	  <% end %>
-    </li>
-  <% end %>
-</ul>
+        <% if current_user.admin? && !current_user?(user) %>
+      	| <%= link_to "delete", user, method: :delete, data: { confirm: "You sure you want to delete this account?" } %>
+    	  <% end %>
+      </li>
+    <% end %>
+  </ul>
+</div>
